--- a/src/tailwind.scss
+++ b/src/tailwind.scss
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+*,
+::before,
+::after {
+  border-width: 0;
+  border-style: solid;
+  border-color: theme('borderColor.default', currentColor);
+}
