--- a/app/application/src/css/index.css
+++ b/app/application/src/css/index.css
@@ -243,3 +243,10 @@ a {
 #choose {
 	display: none;
 }
+
+.name{
+	background-color: rgb(20, 20, 20);
+	padding-right: 10px;
+	padding-left: 10px;
+	border-radius: 30px;
+}
