--- a/src/dragonfly.scss
+++ b/src/dragonfly.scss
@@ -258,7 +258,6 @@ h4 {
 	margin: -10px -10px 0;
 	cursor: pointer;
 	outline: none;
-	transition: 0.2s ease-in;
 	font-size: 1.5rem;
 
 	-webkit-touch-callout: none;
@@ -272,31 +271,6 @@ h4 {
 
 .summary1:hover {
 	color: var(--df_secondary_color);
-}
-
-.summary2 {
-	display: list-item;
-	color: var(--df_primary_color);
-	padding: 10px;
-	margin: -10px -10px 0;
-	cursor: pointer;
-	outline: none;
-	transition: 0.2s ease-in;
-	text-decoration: underline;
-	font-size: 1.5rem;
-
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-o-user-select: none;
-	user-select: none;
-}
-
-.summary2:hover {
-	color: var(--df_secondary_color);
-	text-decoration: underline dashed;
 }
 
 /* details */
@@ -329,35 +303,6 @@ h4 {
 	margin-top: 0;
 }
 
-.details2 {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	padding: 10px 10px 0;
-	border-radius: 15px;
-	overflow: hidden;
-	float: left;
-	margin-right: auto;
-	margin-right: 90vw;
-}
-
-.details2[open] {
-	margin-bottom: 30px;
-	margin-right: 90vw;
-}
-
-.details2 > :last-child {
-	margin-bottom: 0;
-}
-
-.details2[open] summary {
-	margin-bottom: 10px;
-}
-
-.details2 > :not(summary) {
-	margin-top: 0;
-}
-
 ::-webkit-scrollbar-track {
 	background-color: #292a2d;
 }
@@ -384,6 +329,19 @@ h4 {
 	top: 0;
 	position: sticky;
 	z-index: 999999;
+}
+
+details[open] summary ~ * {
+	animation: fadeEffect 0.5s ease-in-out;
+}
+
+@keyframes fadeEffect {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
 .buttonm {
