--- a/src/dragonfly.scss
+++ b/src/dragonfly.scss
@@ -250,59 +250,6 @@ h4 {
 	border-radius: 30px;
 }
 
-/* summary */
-.summary1 {
-	display: list-item;
-	color: var(--df_primary_color);
-	padding: 10px;
-	margin: -10px -10px 0;
-	cursor: pointer;
-	outline: none;
-	font-size: 1.5rem;
-
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-o-user-select: none;
-	user-select: none;
-}
-
-.summary1:hover {
-	color: var(--df_secondary_color);
-}
-
-/* details */
-.details1 {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	padding: 10px 10px 0;
-	border-radius: 15px;
-	overflow: hidden;
-	float: left;
-	margin-right: auto;
-	margin-right: 90vw;
-}
-
-.details1[open] {
-	margin-bottom: 30px;
-	margin-right: 90vw;
-}
-
-.details1 > :last-child {
-	margin-bottom: 0;
-}
-
-.details1[open] summary {
-	margin-bottom: 10px;
-}
-
-.details1 > :not(summary) {
-	margin-top: 0;
-}
-
 ::-webkit-scrollbar-track {
 	background-color: #292a2d;
 }
@@ -329,6 +276,14 @@ h4 {
 	top: 0;
 	position: sticky;
 	z-index: 999999;
+}
+
+details {
+	font-size: 24px;
+}
+
+summary {
+	cursor: pointer;
 }
 
 details[open] summary ~ * {
