--- a/src/dragonfly.scss
+++ b/src/dragonfly.scss
@@ -59,45 +59,11 @@ a:visited {
 	text-decoration: none !important;
 }
 
-.link1:link {
-	color: white;
-	font-size: 2rem;
-	text-decoration: none;
-	transition: 0.2s ease-in;
-}
-
-.link1:hover {
-	color: var(--df_secondary_color) !important;
-	text-decoration: none !important;
-}
-
-.link1:visited {
-	color: var(--df_primary_color);
-	text-decoration: none;
-}
-
-.link2:link {
-	color: var(--df_primary_color);
-	font-size: 2rem;
-	text-decoration: underline;
-	transition: 0.2s ease-in;
-}
-
-.link2:hover {
-	color: var(--df_secondary_color) !important;
-	text-decoration: underline dashed !important;
-}
-
-.link2:visited {
-	color: var(--df_primary_color);
-	text-decoration: underline;
-}
-
 /* buttons */
 .button1 {
 	color: black;
 	background: white;
-	border: 1px solid white;
+	border: 2px solid white;
 	font-size: 1.25rem;
 	padding: 15px 30px;
 	border-radius: 30px;
@@ -107,31 +73,57 @@ a:visited {
 }
 
 .button1:hover {
-	border: 1px solid white;
+	border-color: white;
 	background: transparent;
 	color: white;
 }
 
-.button2 {
-	color: var(--df_primary_color);
-	background: var(--df_primary_background);
-	border: 1px solid var(--df_primary_color);
+.buttoni {
+	color: black;
+	background: white;
+	border: 2px solid white;
 	font-size: 1.25rem;
 	padding: 15px 30px;
 	border-radius: 30px;
 	cursor: pointer;
 	text-decoration: none;
 	transition: 0.2s ease-in;
+	text-align: center;
+	width: 18rem;
 }
 
-.button2:hover {
-	border: 1px solid var(--df_secondary_color);
-	background: var(--df_primary_background);
-	color: var(--df_secondary_color);
+.buttoni:hover {
+	border-color: white;
+	background: transparent;
+	color: white;
+}
+
+.buttoni > svg {
+	position: relative;
+	top: 4px;
+}
+
+.buttonr {
+	margin: 3px;
+	color: black;
+	background: white;
+	border: 2px solid var(--df_primary_color);
+	font-size: 1.25rem;
+	padding: 13px 30px;
+	border-radius: 30px;
+	cursor: pointer;
+	text-decoration: none;
+	transition: 0.2s ease-in;
+	height: 61px;
+}
+
+.buttonr:hover {
+	border: 2px solid var(--df_primary_color);
+	background: transparent;
+	color: var(--df_primary_color);
 }
 
 /* headings */
-
 h1,
 h2,
 h3,
@@ -196,7 +188,7 @@ h4 {
 .input1 {
 	color: black;
 	background: white;
-	border: 1px solid white;
+	border: 2px solid white;
 	font-size: 1rem;
 	padding: 15px 30px;
 	border-radius: 1.8rem;
@@ -208,7 +200,7 @@ h4 {
 .input1:hover {
 	color: white;
 	background-color: transparent;
-	border: 1px solid white;
+	border: 2px solid white;
 }
 
 .input1::placeholder {
@@ -218,7 +210,7 @@ h4 {
 .input2 {
 	color: var(--df_primary_color);
 	background: var(--df_primary_background);
-	border: 1px solid var(--df_primary_color);
+	border: 2px solid var(--df_primary_color);
 	font-size: 1rem;
 	padding: 15px 30px;
 	border-radius: 1.8rem;
@@ -230,7 +222,7 @@ h4 {
 .input2:hover {
 	color: var(--df_secondary_color);
 	background-color: var(--df_primary_background);
-	border: 1px solid var(--df_secondary_color);
+	border: 2px solid var(--df_secondary_color);
 }
 
 .input2::placeholder {
@@ -250,6 +242,7 @@ h4 {
 	border-radius: 30px;
 }
 
+/* scrollbar */
 ::-webkit-scrollbar-track {
 	background-color: #292a2d;
 }
@@ -271,6 +264,7 @@ h4 {
 	background: #292a2d;
 }
 
+/* build number */
 .build {
 	display: none;
 	top: 0;
@@ -278,6 +272,7 @@ h4 {
 	z-index: 999999;
 }
 
+/* details */
 details {
 	font-size: 24px;
 }
@@ -299,31 +294,7 @@ details[open] summary ~ * {
 	}
 }
 
-.buttonm {
-	color: black;
-	background: white;
-	border: 1px solid black;
-	font-size: 1.25rem;
-	padding: 15px 30px;
-	border-radius: 30px;
-	cursor: pointer;
-	text-decoration: none;
-	transition: 0.2s ease-in;
-	text-align: center;
-	width: 18rem;
-}
-
-.buttonm:hover {
-	border-color: white;
-	background: transparent;
-	color: white;
-}
-
-.buttonm > svg {
-	position: relative;
-	top: 4px;
-}
-
+/* popups */
 .online {
 	display: none;
 }
@@ -340,6 +311,7 @@ details[open] summary ~ * {
 	display: none;
 }
 
+/* warnings */
 .warning {
 	color: #a30015;
 	font-weight: bold;
@@ -352,4 +324,81 @@ details[open] summary ~ * {
 	font-weight: bold;
 	margin-top: 30px;
 	font-size: 24px;
+}
+
+/* dropdown */
+.dropdown-button {
+	color: black;
+	background: white;
+	border: 1px solid black;
+	font-size: 1.25rem;
+	padding: 15px 30px;
+	border-radius: 30px;
+	cursor: pointer;
+	text-decoration: none;
+	transition: 0.2s ease-in;
+	text-align: center;
+	width: 18rem;
+	height: 3.8rem;
+}
+
+.dropdown-button:hover {
+	color: white;
+	background-color: transparent;
+	border-color: white;
+}
+
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
+	top: 65px;
+	display: none;
+	position: absolute;
+	width: 18rem;
+	z-index: 1;
+	border-radius: 30px;
+}
+
+.dropdown-content a {
+	color: black;
+	padding: 10px 10px;
+	text-decoration: none;
+	display: block;
+	background-color: white;
+}
+
+.dropdown-content a:hover {
+	background-color: rgb(20, 20, 20);
+	color: white;
+}
+
+.dropdown-content a:first-child {
+	border-top-left-radius: 30px;
+	border-top-right-radius: 30px;
+}
+
+.dropdown-content :last-child {
+	border-bottom-left-radius: 30px;
+	border-bottom-right-radius: 30px;
+}
+
+.dropdown-link > svg {
+	height: 1em;
+	width: 1em;
+	margin: 0 0.05em 0 0.1em;
+	vertical-align: -0.1em;
+}
+
+.dropdown-link:link {
+	text-decoration: none !important;
+	font-weight: normal;
+	font-size: 20px;
+}
+
+.dropdown-button > svg {
+	position: relative;
+	top: 4px;
 }
