--- a/app/import/src/css/index.css
+++ b/app/import/src/css/index.css
@@ -50,3 +50,10 @@ input:hover::placeholder {
 #dt {
 	margin-bottom: 30px;
 }
+
+video {
+	border-radius: 30px;
+	width: 80%;
+	padding: 10px;
+	background-color: rgb(255, 255, 255);
+}
