Redesigned edit,import,export page #147

--- a/src/dragonfly.scss
+++ b/src/dragonfly.scss
@@ -213,7 +213,7 @@ a:visited {
 	padding-top: 30px;
 	margin: 130px auto;
 	height: 300px;
-	width: 600px;
+	width: 60%;
 	border-radius: 30px;
 }
 
