--- a/app/edit/src/css/index.css
+++ b/app/edit/src/css/index.css
@@ -1,10 +1,3 @@
-.center {
-	top: -50px;
-	width: 1000px;
-	height: auto;
-	padding-bottom: 50px !important;
-}
-
 .input1 {
 	color: black;
 	background-color: white;
@@ -44,7 +37,8 @@
 	margin-top: 0px;
 	border-radius: 30px;
 	margin: 0 auto;
-	margin-top: 20px;
+	margin-top: 5rem;
+	margin-bottom: 5rem;
 	width: 66.666667%;
 	height: 300px;
 }
