--- a/app/export/src/css/index.css
+++ b/app/export/src/css/index.css
@@ -1,10 +1,3 @@
-.center {
-	top: -50px;
-	width: 1000px;
-	height: auto;
-	padding-bottom: 50px;
-}
-
 .qr {
 	padding-top: 250px;
 	background-color: rgb(10, 10, 10);
@@ -14,6 +7,7 @@
 	margin-top: 20px;
 	width: 66.666667%;
 	height: 500px;
+	margin-bottom: 4rem;
 }
 
 .parent {
