--- a/app/confirm/src/css/index.css
+++ b/app/confirm/src/css/index.css
@@ -1,9 +1,3 @@
-.center {
-	top: 50px;
-	width: 1000px;
-	height: auto;
-}
-
 .input1 {
 	width: 226px;
 }
@@ -20,4 +14,17 @@
 
 details {
 	font-size: 24px;
+}
+
+.animation {
+	animation: fadeEffect 1s;
+}
+
+@keyframes fadeEffect {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
