--- a/app/import/src/css/index.css
+++ b/app/import/src/css/index.css
@@ -1,52 +1,17 @@
-.center {
-	top: -50px;
-	width: 1000px;
-	height: auto;
-}
-
-.grid {
-	display: grid;
-	grid-template-columns: repeat(5, 1fr);
-	grid-template-rows: repeat(5, 1fr);
-	grid-column-gap: 0px;
-	grid-row-gap: 0px;
-
-	width: 300px;
-	background-color: black;
-	margin: 0 auto;
-}
-
-input:focus::placeholder {
-	transition: 0.2s ease-in;
-	color: transparent;
-}
-
-input:hover::placeholder {
-	transition: 0.2s ease-in;
-	color: transparent;
-}
-
-.text-inputs {
-	display: none;
-	margin: 0 auto;
-	margin-top: 30px;
-}
-
 #but0,
-#but1 {
+#but1,
+#but2,
+#but3 {
 	margin-bottom: 30px;
-}
-
-.details1 {
-	width: 98%;
-}
-
-.summary1 {
-	color: white;
-	color: white;
-	font-weight: bolder;
 }
 
 #dt {
 	margin-bottom: 30px;
+}
+
+video {
+	border-radius: 30px;
+	width: 80%;
+	padding: 10px;
+	background-color: rgb(255, 255, 255);
 }
