--- a/src/tailwind.scss
+++ b/src/tailwind.scss
@@ -8,6 +8,12 @@
 	border-width: 0;
 	border-style: solid;
 	border-color: theme("borderColor.default", currentColor);
+	user-select: none;
+	-webkit-user-drag: none;
+	-webkit-app-region: no-drag;
+}
+
+@layer components {
 }
 
 @layer base {
@@ -34,4 +40,39 @@
 	svg {
 		@apply focus-visible:ring-popup-magenta focus-visible:ring-4 focus-visible:rounded-2xl;
 	}
+
+	h3 {
+		@apply focus-visible:ring-popup-magenta focus-visible:ring-4 focus-visible:rounded-2xl;
+	}
+}
+
+/* headings */
+h1 {
+	font-size: 64px;
+	font-weight: bold;
+	margin: 2rem;
+}
+
+h2 {
+	font-size: 48px;
+	font-weight: bold;
+	margin: 2rem;
+}
+
+h3 {
+	font-size: 32px;
+	font-weight: bold;
+	margin: 2rem;
+}
+
+h4 {
+	font-size: 24px;
+	margin: 2rem;
+	font-weight: normal;
+}
+
+h5 {
+	font-size: 18px;
+	margin: 2rem;
+	font-weight: normal;
 }
