Fix input design

--- a/src/dragonfly.scss
+++ b/src/dragonfly.scss
@@ -169,6 +169,8 @@ a:visited {
 	cursor: text;
 	text-align: center;
 	transition: 0.2s ease-in;
+	width: 14rem;
+	height: 25px !important;
 }
 
 .input1:hover {
