--- a/src/tailwind.scss
+++ b/src/tailwind.scss
@@ -31,7 +31,7 @@
 	}
 
 	.input {
-		@apply bg-white text-black rounded-2xl border-2 border-white w-[220px] cursor-text px-8 py-[18px] mb-6 text-lg text-center hover:bg-transparent hover:text-white transform duration-200 ease-in;
+		@apply bg-white text-black rounded-2xl border-2 border-white w-[220px] cursor-text px-8 py-[18px] text-lg text-center hover:bg-transparent hover:text-white transform duration-200 ease-in;
 	}
 }
 
