--- a/src/dragonfly.scss
+++ b/src/dragonfly.scss
@@ -58,151 +58,6 @@ a:visited {
 	text-decoration: none !important;
 }
 
-/* buttons */
-.button1 {
-	color: black;
-	background: white;
-	border: 2px solid white;
-	font-size: 1.25rem;
-	padding: 15px 30px;
-	border-radius: 30px;
-	cursor: pointer;
-	text-decoration: none;
-	transition: 0.2s ease-in;
-}
-
-.button1:hover {
-	border-color: white;
-	background: transparent;
-	color: white;
-}
-
-.buttoni {
-	color: black;
-	background: white;
-	border: 2px solid white;
-	font-size: 1.25rem;
-	padding: 15px 30px;
-	border-radius: 30px;
-	cursor: pointer;
-	text-decoration: none;
-	transition: 0.2s ease-in;
-	text-align: center;
-	width: 18rem;
-}
-
-.buttoni:hover {
-	border-color: white;
-	background: transparent;
-	color: white;
-}
-
-.buttoni > svg {
-	position: relative;
-	top: 4px;
-}
-
-.buttonr {
-	margin: 3px;
-	color: black;
-	background: white;
-	border: 2px solid var(--df_primary_color);
-	font-size: 1.25rem;
-	padding: 13px 30px;
-	border-radius: 30px;
-	cursor: pointer;
-	text-decoration: none;
-	transition: 0.2s ease-in;
-	height: 61px;
-}
-
-.buttonr:hover {
-	border: 2px solid var(--df_primary_color);
-	background: transparent;
-	color: var(--df_primary_color);
-}
-
-/* text */
-.text1,
-.text2,
-.text3,
-.text4 {
-	margin: 1rem;
-}
-
-.text1 {
-	font-size: 2rem;
-}
-
-.text2 {
-	font-size: 1.75rem;
-}
-
-.text3 {
-	font-size: 1.5rem;
-}
-
-.text4 {
-	font-size: 1rem;
-}
-
-/* inputs */
-.input1:focus::placeholder,
-.input2:focus::placeholder {
-	transition: 0.2s ease-in;
-	color: transparent;
-}
-
-.input1:hover::placeholder,
-.input2:hover::placeholder {
-	transition: 0.2s ease-in;
-	color: transparent;
-}
-
-.input1 {
-	color: black;
-	background: white;
-	border: 2px solid white;
-	font-size: 1rem;
-	padding: 15px 30px;
-	border-radius: 1.8rem;
-	cursor: text;
-	text-align: center;
-	transition: 0.2s ease-in;
-}
-
-.input1:hover {
-	color: white;
-	background-color: transparent;
-	border: 2px solid white;
-}
-
-.input1::placeholder {
-	color: var(--df_secondary_color);
-}
-
-.input2 {
-	color: var(--df_primary_color);
-	background: var(--df_primary_background);
-	border: 2px solid var(--df_primary_color);
-	font-size: 1rem;
-	padding: 15px 30px;
-	border-radius: 1.8rem;
-	cursor: text;
-	text-align: center;
-	transition: 0.2s ease-in;
-}
-
-.input2:hover {
-	color: var(--df_secondary_color);
-	background-color: var(--df_primary_background);
-	border: 2px solid var(--df_secondary_color);
-}
-
-.input2::placeholder {
-	color: var(--df_primary_color);
-}
-
 /* divs*/
 .center {
 	background-color: rgb(20, 20, 20);
@@ -269,43 +124,11 @@ details[open] summary ~ * {
 	}
 }
 
-/* popups */
-.online {
-	display: none;
-}
-
-.offline {
-	display: none;
-}
-
-.update {
-	display: none;
-}
-
-.info {
-	display: none;
-}
-
-/* warnings */
-.warning {
-	color: #a30015;
-	font-weight: bold;
-	margin-top: 30px;
-	font-size: 24px;
-}
-
-.unstable {
-	color: #f5ab00;
-	font-weight: bold;
-	margin-top: 30px;
-	font-size: 24px;
-}
-
 /* dropdown */
 .dropdown-button {
 	color: black;
 	background: white;
-	border: 2px solid black;
+	border: 2px solid white;
 	font-size: 1.25rem;
 	padding: 15px 30px;
 	border-radius: 30px;
@@ -314,7 +137,6 @@ details[open] summary ~ * {
 	transition: 0.2s ease-in;
 	text-align: center;
 	width: 18rem;
-	height: 3.8rem;
 }
 
 .dropdown-button:hover {
@@ -329,7 +151,7 @@ details[open] summary ~ * {
 }
 
 .dropdown-content {
-	top: 65px;
+	top: 70px;
 	display: none;
 	position: absolute;
 	width: 18rem;
@@ -355,7 +177,7 @@ details[open] summary ~ * {
 	border-top-right-radius: 30px;
 }
 
-.dropdown-content :last-child {
+.dropdown-content a:last-child {
 	border-bottom-left-radius: 30px;
 	border-bottom-right-radius: 30px;
 }
@@ -376,4 +198,8 @@ details[open] summary ~ * {
 .dropdown-button > svg {
 	position: relative;
 	top: 4px;
+}
+
+.animation {
+	animation: fadeEffect 0.5s;
 }
