--- a/src/tailwind.scss
+++ b/src/tailwind.scss
@@ -15,23 +15,27 @@
 
 @layer components {
 	.checkbox {
-		@apply outline-none form-checkbox rounded-full relative border-2 -top-0.5 focus:ring-white text-black cursor-pointer transform duration-200 ease-in;
+		@apply outline-none form-checkbox rounded-full relative border-2 -top-0.5 focus:ring-white text-black cursor-pointer transform duration-200 ease-in motion-reduce:transition-none motion-reduce:transform-none;
+	}
+
+	.toggle {
+		@apply checked:right-1 checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer motion-reduce:transition-none motion-reduce:transform-none;
 	}
 
 	.buttoni {
-		@apply bg-white rounded-2xl border-2 border-white w-72 cursor-pointer px-8 py-[16.5px] text-xl hover:bg-transparent hover:text-white transform duration-200 ease-in;
+		@apply bg-white rounded-2xl border-2 border-white w-72 cursor-pointer px-8 py-[16.5px] text-xl hover:bg-transparent hover:text-white transform duration-200 ease-in motion-reduce:transition-none motion-reduce:transform-none;
 	}
 
 	.buttonm {
-		@apply text-white bg-black rounded-2xl text-left border-2 border-black w-60 cursor-pointer px-8 py-[16.5px] text-xl hover:bg-gray-700 hover:border-gray-700 transform duration-200 ease-in;
+		@apply text-white bg-black rounded-2xl text-left border-2 border-black w-60 cursor-pointer px-8 py-[16.5px] text-xl hover:bg-gray-700 hover:border-gray-700 transform duration-200 ease-in motion-reduce:transition-none motion-reduce:transform-none;
 	}
 
 	.buttonr {
-		@apply bg-white rounded-2xl border-2 border-white w-[88px] cursor-pointer px-8 py-[16.5px] text-xl hover:bg-transparent hover:text-white hover:bg-gray-700 transform duration-200 ease-in;
+		@apply bg-white rounded-2xl border-2 border-white w-[88px] cursor-pointer px-8 py-[16.5px] text-xl hover:bg-transparent hover:text-white hover:bg-gray-700 transform duration-200 ease-in motion-reduce:transition-none motion-reduce:transform-none;
 	}
 
 	.input {
-		@apply bg-white text-black rounded-2xl border-2 border-white w-[220px] cursor-text px-8 py-[18px] text-lg text-center hover:bg-transparent hover:text-white transform duration-200 ease-in;
+		@apply bg-white text-black rounded-2xl border-2 border-white w-[220px] cursor-text px-8 py-[18px] text-lg text-center hover:bg-transparent hover:text-white transform duration-200 ease-in motion-reduce:transition-none motion-reduce:transform-none;
 	}
 }
 
