--- a/src/dragonfly.scss
+++ b/src/dragonfly.scss
@@ -2,19 +2,6 @@
 /* 1.4.0 */
 /* Created by: Levminer */
 
-:root {
-	/* main colors */
-	--df_primary_color: rgb(255, 255, 255);
-	--df_secondary_color: rgb(255, 255, 255);
-	--df_tertiary_color: rgb(0, 0, 0);
-	/* background colors */
-	--df_primary_background: rgb(10, 10, 10);
-	--df_secondary_background: rgb(10, 10, 10);
-	/* gradiant colors */
-	--df_gradiant_start: rgb(20, 20, 20);
-	--df_gradiant_end: rgb(30, 30, 30);
-}
-
 /* body */
 body {
 	color: white;
@@ -58,22 +45,9 @@ a:visited {
 	text-decoration: none !important;
 }
 
-/* divs*/
-.center {
-	background-color: rgb(20, 20, 20);
-	position: relative;
-	top: 200px;
-	text-align: center;
-	padding-top: 30px;
-	margin: 130px auto;
-	height: 300px;
-	width: 60%;
-	border-radius: 30px;
-}
-
 /* scrollbar */
 ::-webkit-scrollbar-track {
-	background-color: #292a2d;
+	background-color: #000000;
 }
 
 ::-webkit-scrollbar {
@@ -82,23 +56,15 @@ a:visited {
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: rgb(20, 20, 20);
-}
-
-::-webkit-scrollbar-thumb:hover {
 	background-color: rgb(30, 30, 30);
 }
 
-::-webkit-scrollbar-corner {
-	background: #292a2d;
+::-webkit-scrollbar-thumb:hover {
+	background-color: rgb(40, 40, 40);
 }
 
-/* build number */
-.build {
-	display: none;
-	top: 0;
-	position: sticky;
-	z-index: 999999;
+::-webkit-scrollbar-corner {
+	background-color: #000000;
 }
 
 /* details */
@@ -218,6 +184,26 @@ details[open] summary ~ * {
 .toggle:checked ~ .toggle-bg {
 	background-color: black !important;
 	transition: 0.2s ease-in;
+}
+
+.input:hover ~ #show_pass_0 {
+	transition: 0.2s ease-in;
+	stroke: white;
+}
+
+.input:hover ~ #show_pass_01 {
+	transition: 0.2s ease-in;
+	stroke: white;
+}
+
+.input:hover ~ #show_pass_1 {
+	transition: 0.2s ease-in;
+	stroke: white;
+}
+
+.input:hover ~ #show_pass_11 {
+	transition: 0.2s ease-in;
+	stroke: white;
 }
 
 hr {
