Fix summary tab selection #129

--- a/src/tailwind.scss
+++ b/src/tailwind.scss
@@ -49,7 +49,7 @@
 	}
 
 	summary {
-		@apply focus-visible:ring-popup-magenta focus-visible:ring-4 focus-visible:rounded-2xl;
+		@apply focus-visible:ring-popup-magenta focus-visible:ring-4 focus-visible:rounded-2xl w-max mx-auto;
 	}
 
 	a {
