New title bar  #159

--- a/src/partials/components/components.scss
+++ b/src/partials/components/components.scss
@@ -61,6 +61,6 @@
 }
 
 .buttonmselected {
-	background-color: rgb(30, 30, 30);
-	border-color: rgb(30, 30, 30);
+	background-color: rgb(30, 30, 30) !important;
+	border-color: rgb(30, 30, 30) !important;
 }
