--- a/src/partials/layout/titlebar.scss
+++ b/src/partials/layout/titlebar.scss
@@ -50,3 +50,12 @@ body > div.titlebar.cet-windows > div.menubar > div.menubar-menu-button.open > u
 	margin-top: 1px;
 	margin-bottom: 1px;
 }
+
+#inWwZYhAUIn1Em9I4xse {
+	font-family: Arial, Helvetica, sans-serif;
+	color: white !important;
+}
+
+#Dkn6ACv01kUS9jSTUukB {
+	display: none !important;
+}
