--- a/src/partials/layout/titlebar.scss
+++ b/src/partials/layout/titlebar.scss
@@ -1,61 +1,24 @@
 /* titlebar */
-.window-title {
-	display: none;
-}
-
-body > div.titlebar.cet-windows > div.window-controls-container {
-	display: none;
-}
-
-body > div.titlebar.cet-windows > div.menubar > div.menubar-menu-button.open > ul > li > a {
-	text-decoration: none !important;
-}
-
-.focused {
-	background-color: rgb(30, 30, 30);
-}
-
-body > div.titlebar.cet-windows > div.menubar > div:hover {
-	background-color: rgb(30, 30, 30);
-}
-
-body > div.titlebar.cet-windows > div.menubar > div.menubar-menu-button.open > ul > li > a > span.keybinding {
-	text-transform: capitalize;
-}
-
-body > div.titlebar.cet-windows > div.menubar > div.menubar-menu-button.open > ul > li > a {
-	margin-left: 0;
-	margin-right: 0;
-}
-
-.separator {
-	border-color: rgb(40, 40, 40) !important;
-	opacity: 1 !important;
-}
-
-.menubar-menu-container {
-	border: 1px rgb(40, 40, 40) solid !important;
-}
-
-.menu-item-icon {
-	width: 0 !important;
-	height: 0 !important;
-}
-
-.menubar-menu-container {
-	padding: 0.2em 0 !important;
-}
-
-body > div.titlebar.cet-windows > div.menubar > div.menubar-menu-button.open > ul > li:nth-child(3) {
-	margin-top: 1px;
-	margin-bottom: 1px;
-}
-
 #inWwZYhAUIn1Em9I4xse {
 	font-family: Arial, Helvetica, sans-serif;
 	color: white !important;
 }
 
+/* controls */
 #Dkn6ACv01kUS9jSTUukB {
 	display: none !important;
+}
+
+/* submenu */
+._QlZaSdX5nLPcY6VswOO {
+	background-color: rgb(0, 0, 0) !important;
+	border: 1px solid rgb(40, 40, 40);
+	text-transform: capitalize !important;
+}
+
+/* separator */
+.QwagKaGf3ay8KUEwaA29 {
+	margin: 8px 0px !important;
+	background-color: rgb(40, 40, 40) !important;
+	opacity: 1 !important;
 }
