Fix window drag #159

--- a/src/partials/layout/titlebar.scss
+++ b/src/partials/layout/titlebar.scss
@@ -1,23 +1,18 @@
 /* titlebar */
-#inWwZYhAUIn1Em9I4xse {
+.custom-titlebar {
 	font-family: Arial, Helvetica, sans-serif;
 	color: white !important;
 }
 
-/* controls */
-#Dkn6ACv01kUS9jSTUukB {
-	display: none !important;
-}
-
 /* submenu */
-._QlZaSdX5nLPcY6VswOO {
+.custom-titlebar-submenu {
 	background-color: rgb(0, 0, 0) !important;
 	border: 1px solid rgb(40, 40, 40);
 	text-transform: capitalize !important;
 }
 
 /* separator */
-.QwagKaGf3ay8KUEwaA29 {
+.custom-titlebar-separator {
 	margin: 8px 0px !important;
 	background-color: rgb(40, 40, 40) !important;
 	opacity: 1 !important;
