--- a/src/partials/layout/titlebar.scss
+++ b/src/partials/layout/titlebar.scss
@@ -4,6 +4,11 @@
 	color: white !important;
 }
 
+/* controls */
+.custom-titlebar-controls {
+	display: none !important;
+}
+
 /* submenu */
 .custom-titlebar-submenu {
 	background-color: rgb(0, 0, 0) !important;
